--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -1,10 +1,92 @@
+
+/*
+.main-background {
+  text-align: center;
+  background-image: url('https://s3.us-east-2.amazonaws.com/jeremy-grubard-website/abstract-art-background-289649.jpg');
+  background-size: cover;
+  height: 100%;
+  padding: 200px;
+}
+*/
+
+/* .main-background{
+  background-image: url('img.jpg') no-repeat;
+  position: relative;
+} */
+
+/* .main-background::before{
+  background-color: rgba(255, 255, 255, 0.37);
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  width: 100%;
+} */
+
+.jeremy-photo {
+  height: 400px;
+  width: auto;
+  margin-right: 20px;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
+.home-card {
+  display: flex;
+  background-color: rgb(207, 221, 240);
+  padding: 20;
+  border-radius: 10px;
+  margin: 0 200;
+  box-shadow: 0px 0px 15px rgb(156, 156, 156);
+}
+
+.home-text {
+  flex: 2
+}
+
+
+/* intro */
+.intro-container {
+  text-align: center;
+}
+
+.bg-container {
+  background-image: url('https://s3.us-east-2.amazonaws.com/jeremy-grubard-website/abstract-art-background-289649.jpg');
+  background-size: cover;
+  background-attachment: fixed;
+  height: relative;
+  margin-bottom: -80px;
+  padding: 200px 0 400px 0;
+  /* margin-top: 100px; */
+  /* margin-bottom: 400px; */
+}
+
+/* .intro-image {
+  width: 100%;
+  display: fixed;
+} */
+
+.message-container {
+  color: white;
+  margin: 50 0 50 0;
+  /* height: 75px; */
+  height: 200px;
+  text-shadow: 0px 0px 12px white;
+}
+
+.message-text {
+  /* display: block; */
+  color: rgb(50, 96, 180);
+  font-size: 65;
+}
+
 /* from contact page */
 .title {
   text-align: center;
 }
 
 .input {
-  width: 60%;
+  width: 95%;
   margin: 0 auto;
 }
 
@@ -12,7 +94,48 @@
   margin: 30 auto;
   display: flex;
   justify-content: center;
+  /* color: rgb(40, 100, 190); */
 }
+
+.contact-card {
+  background-color: rgb(207, 221, 240);
+  padding: 20;
+  border-radius: 10px;
+  /* padding: 5; */
+  margin: auto;
+  box-shadow: 0px 0px 15px rgb(156, 156, 156);
+  width: 60%;
+  /* text-align: center; */
+}
+
+.custom-button {
+  color: white;
+  background-color: rgb(40, 100, 190);
+  height: 45px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 13px;
+  letter-spacing: 1px;
+
+  padding: 8 32;
+
+  /* box-shadow: $z-depth-1; */
+  /* @include button-size($btn-padding-y-basic, $btn-padding-x-basic, $btn-font-size-basic); */
+  /* transition: $btn-transition; */
+  /* margin: $btn-margin-basic; */
+  border: 0;
+  /* border-radius: $border-radius-base; */
+  cursor: pointer;
+  text-transform: uppercase;
+  white-space: normal;
+  word-wrap: break-word;
+  /* font-weight: bold; */
+}
+
+/* .button-enter {
+  margin: 40 auto;
+  display: block;
+  justify-content: center;
+} */
 
 .error {
   font-size: 14;
@@ -25,7 +148,7 @@
 
 /* nav bar */
 .nav-bar {
-  background-color: rgb(0, 90, 255);
+  background-color: rgb(40, 100, 190);
 }
 
 .link-padding {
@@ -39,7 +162,8 @@
 }
 
 .icons:hover {
-  color: lightgrey;
+  transform: scale(1.2);
+  transition-duration: 500ms;
 }
 
 .resume {
@@ -48,19 +172,31 @@
   color: white;
 }
 
-.resume:hover {
-  color: lightgrey;
+.pdf-page {
+  background-color: black;
+  padding: 50px;
 }
+
+.resume:hover {
+  /* color: white; */
+  transform: scale(1.1);
+  transition-duration: 500ms;
+}
+
+
 
 /* projects */
 .project-container {
-  margin: 0 100;
+  margin: 80 200;
 }
 
 .project-card {
-  background-color: rgba(76, 139, 255, 0.3);
+  background-color: rgb(207, 221, 240);
   padding: 20;
   border-radius: 10px;
+  margin: 20 0;
+  box-shadow: 0px 0px 15px rgb(156, 156, 156);
+  /* text-align: center; */
 }
 
 /* videos */
@@ -76,7 +212,98 @@
 }
 
 /* media queries */
-@media (max-width:500px) {
+@media (max-width: 1200px) {
+  .project-container {
+    margin: 0 100;
+  }
+}
+
+@media (max-width: 1150px) {
+  .home-card {
+    /* display: flex; */
+    margin: 0 100;
+  }
+
+  .jeremy-photo {
+    height: 300;
+    width: 300;
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .home-card {
+    /* display: block; */
+    margin: 0 50;
+  }
+
+  .jeremy-photo {
+    height: 250;
+    width: 250;
+    margin-right: 20px;
+  }
+}
+
+@media (max-width: 800px) {
+  .project-container {
+    margin: 0 50;
+  }
+  /* .home-card { */
+    /* display: block; */
+    /* margin: 0; */
+  /* } */
+
+  /* .jeremy-photo { */
+    /* height: 250;
+    width: 250; */
+    /* margin: 5 5 20 5; */
+    /* padding: 50px 0; */
+  /* } */
+
+}
+
+@media (max-width: 750px) {
+  .project-container {
+    margin: 0;
+  }
+  .home-card {
+    display: block;
+    margin: 0;
+  }
+
+  .jeremy-photo {
+    height: 250;
+    width: 250;
+    margin: 5 5 20 5;
+    margin-left: auto;
+    margin-right: auto;
+    /* padding: 50px 0; */
+  }
+
+}
+
+@media (max-width: 500px) {
+
+  /* .home-card {
+    display: block;
+    margin: 0;
+  } */
+
+  /* .jeremy-photo { */
+    /* height: auto; */
+    /* width: 250; */
+    /* margin: 5 5 20 5; */
+  /* } */
+
+  .intro-container {
+    padding: 30 0;
+  }
+  
+  .message-container {
+    margin: 15 10;
+    height: 40px;
+  }
+  
   .input {
     width: 100%;
     margin: 0 auto;
@@ -84,5 +311,11 @@
 
   .project-container {
     margin: 0;
+  }
+
+  .button-enter {
+    margin: 40 auto;
+    display: flex;
+    justify-content: center;
   }
 }
