--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -316,6 +316,10 @@
     margin: 15 10;
     height: 40px;
   }
+
+  .message-text {
+    font-size: 57;
+  }
   
   .input {
     width: 100%;
@@ -327,8 +331,14 @@
   }
 
   .button-enter {
+    top: 150px;
     margin: 40 auto;
     display: flex;
     justify-content: center;
+  }
+
+  .intro-container {
+    height: 100%;
+    margin-bottom: 0px;
   }
 }
