--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -1,28 +1,3 @@
-
-/*
-.main-background {
-  text-align: center;
-  background-image: url('https://s3.us-east-2.amazonaws.com/jeremy-grubard-website/abstract-art-background-289649.jpg');
-  background-size: cover;
-  height: 100%;
-  padding: 200px;
-}
-*/
-
-/* .main-background{
-  background-image: url('img.jpg') no-repeat;
-  position: relative;
-} */
-
-/* .main-background::before{
-  background-color: rgba(255, 255, 255, 0.37);
-  content: '';
-  display: block;
-  height: 100%;
-  position: absolute;
-  width: 100%;
-} */
-
 .jeremy-photo {
   height: 400px;
   width: auto;
@@ -31,7 +6,7 @@
   margin-bottom: auto;
 }
 
-.home-card {
+.about-card {
   display: flex;
   background-color: rgb(207, 221, 240);
   padding: 20;
@@ -40,10 +15,9 @@
   box-shadow: 0px 0px 15px rgb(156, 156, 156);
 }
 
-.home-text {
+.about-text {
   flex: 2
 }
-
 
 /* intro */
 .intro-container {
@@ -57,25 +31,16 @@
   height: relative;
   margin-bottom: -80px;
   padding: 200px 0 400px 0;
-  /* margin-top: 100px; */
-  /* margin-bottom: 400px; */
 }
-
-/* .intro-image {
-  width: 100%;
-  display: fixed;
-} */
 
 .message-container {
   color: white;
   margin: 50 0 50 0;
-  /* height: 75px; */
   height: 200px;
   text-shadow: 0px 0px 12px white;
 }
 
 .message-text {
-  /* display: block; */
   color: rgb(50, 96, 180);
   font-size: 65;
 }
@@ -94,48 +59,16 @@
   margin: 30 auto;
   display: flex;
   justify-content: center;
-  /* color: rgb(40, 100, 190); */
 }
 
 .contact-card {
   background-color: rgb(207, 221, 240);
   padding: 20;
   border-radius: 10px;
-  /* padding: 5; */
   margin: auto;
   box-shadow: 0px 0px 15px rgb(156, 156, 156);
   width: 60%;
-  /* text-align: center; */
 }
-
-.custom-button {
-  color: white;
-  background-color: rgb(40, 100, 190);
-  height: 45px;
-  font-family: 'Roboto', sans-serif;
-  font-size: 13px;
-  letter-spacing: 1px;
-
-  padding: 8 32;
-
-  /* box-shadow: $z-depth-1; */
-  /* @include button-size($btn-padding-y-basic, $btn-padding-x-basic, $btn-font-size-basic); */
-  /* transition: $btn-transition; */
-  /* margin: $btn-margin-basic; */
-  border: 0;
-  /* border-radius: $border-radius-base; */
-  cursor: pointer;
-  text-transform: uppercase;
-  white-space: normal;
-  word-wrap: break-word;
-  /* font-weight: bold; */
-}
-
-/* .button-enter {
-  margin: 40 auto;
-  display: block;
-  justify-content: center;
-} */
 
 .error {
   font-size: 14;
@@ -178,12 +111,9 @@
 }
 
 .resume:hover {
-  /* color: white; */
   transform: scale(1.1);
   transition-duration: 500ms;
 }
-
-
 
 /* projects */
 .project-container {
@@ -196,7 +126,6 @@
   border-radius: 10px;
   margin: 20 0;
   box-shadow: 0px 0px 15px rgb(156, 156, 156);
-  /* text-align: center; */
 }
 
 /* videos */
@@ -219,8 +148,7 @@
 }
 
 @media (max-width: 1150px) {
-  .home-card {
-    /* display: flex; */
+  .about-card {
     margin: 0 100;
   }
 
@@ -232,8 +160,7 @@
 }
 
 @media (max-width: 1000px) {
-  .home-card {
-    /* display: block; */
+  .about-card {
     margin: 0 50;
   }
 
@@ -248,18 +175,6 @@
   .project-container {
     margin: 0 50;
   }
-  /* .home-card { */
-    /* display: block; */
-    /* margin: 0; */
-  /* } */
-
-  /* .jeremy-photo { */
-    /* height: 250;
-    width: 250; */
-    /* margin: 5 5 20 5; */
-    /* padding: 50px 0; */
-  /* } */
-
 }
 
 @media (max-width: 750px) {
@@ -267,7 +182,7 @@
     margin: 0;
   }
 
-  .home-card {
+  .about-card {
     display: block;
     margin: 0;
   }
@@ -278,29 +193,16 @@
     margin: 5 5 20 5;
     margin-left: auto;
     margin-right: auto;
-    /* padding: 50px 0; */
   }
 
 }
 
 @media (max-width: 500px) {
-
-  /* .home-card {
-    display: block;
-    margin: 0;
-  } */
-
-  /* .jeremy-photo { */
-    /* height: auto; */
-    /* width: 250; */
-    /* margin: 5 5 20 5; */
-  /* } */
-
   .contact-card {
     width: 90%;
   }
 
-  .home-card {
+  .about-card {
     margin: 20;
   }
 
