--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -24,13 +24,11 @@
   text-align: center;
 }
 
-.bg-container {
+body {
   background-image: url('https://s3.us-east-2.amazonaws.com/jeremy-grubard-website/abstract-art-background-289649.jpg');
   background-size: cover;
   background-attachment: fixed;
-  height: relative;
-  margin-bottom: -80px;
-  padding: 200px 0 400px 0;
+  padding-top: 100px;
 }
 
 .message-container {
@@ -117,14 +115,14 @@
 
 /* projects */
 .project-container {
-  margin: 80 200;
+  margin: 0 200;
 }
 
 .project-card {
   background-color: rgb(207, 221, 240);
   padding: 20;
   border-radius: 10px;
-  margin: 20 0;
+  margin-bottom: 40;
   box-shadow: 0px 0px 15px rgb(156, 156, 156);
 }
 
