--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -7,12 +7,15 @@
 }
 
 .about-card {
-  display: flex;
   background-color: rgb(207, 221, 240);
   padding: 20;
   border-radius: 10px;
   margin: 0 200;
   box-shadow: 0px 0px 15px rgb(156, 156, 156);
+}
+
+.about-flex {
+  display: flex;
 }
 
 .about-text {
@@ -45,7 +48,17 @@ body {
 
 /* from contact page */
 .title {
+  /* display: block; */
+  margin-top: -40;
+  margin-bottom: 20;
+  padding: 10;
+  margin-left: 30%;
+  margin-right: 30%;
+  border-radius: 10px;
+  font-weight: bold;
+  background-color:  rgb(50, 96, 180);
   text-align: center;
+  color: white;
 }
 
 .input {
@@ -182,30 +195,49 @@ body {
 
   .about-card {
     display: block;
-    margin: 0;
+    margin: 0 20;
+  }
+
+  .about-flex {
+    display: block;
   }
 
   .jeremy-photo {
-    height: 250;
-    width: 250;
-    margin: 5 5 20 5;
-    margin-left: auto;
+    display: block;
     margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 15px;
   }
-
 }
 
 @media (max-width: 500px) {
+  .jeremy-photo {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 15px;
+  }
+
   .contact-card {
     width: 90%;
   }
 
   .about-card {
-    margin: 20;
+    margin: 0 20;
   }
 
+  .about-flex {
+    display: block;
+  }
+
+  /* .jeremy-photo {
+    margin-left: auto;
+    margin-right: auto;
+  } */
+
   .project-card {
-    margin: 20;
+    margin: 0 20 40 20;
+    /* margin: T R B L; */
   }
 
   .intro-container {
@@ -240,5 +272,18 @@ body {
   .intro-container {
     height: 100%;
     margin-bottom: 0px;
+  }
+
+  .title {
+    /* margin-top: -40; */
+    /* padding: 10; */
+    font-size: 25px;
+    margin-left: 5%;
+    margin-right: 5%;
+    /* border-radius: 10px; */
+    /* font-weight: bold; */
+    /* background-color:  rgb(50, 96, 180); */
+    /* text-align: center; */
+    /* color: white; */
   }
 }
