--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -8,6 +8,9 @@
   margin-right: 20px;
   margin-top: auto;
   margin-bottom: auto;
+  border: solid;
+  border-width: 5;
+  border-color: rgb(50, 96, 180);
 }
 
 .card {
@@ -125,6 +128,7 @@ body {
 }
 
 .icons-flex-container {
+  margin-top: 10px;
   display: flex;
   justify-content: center;
 }
