--- a/client/public/styles/main.css
+++ b/client/public/styles/main.css
@@ -98,7 +98,7 @@ body {
 .contact-card {
   padding: 20;
   border-radius: 10px;
-  margin: auto;
+  margin: 0 auto 20 auto;
   box-shadow: 0px 0px 15px rgb(156, 156, 156);
   width: 60%;
 }
